fixed asset table spacing

--- a/react-app/src/components/Assets/Assets.css
+++ b/react-app/src/components/Assets/Assets.css
@@ -1,5 +1,5 @@
 
-#assets-table > tbody > tr > td, #assets-table > thead > tr > th {
+#asset-table-rows > td, #assets-table > thead > tr > th {
   padding: 10px 6px 10px 20px;
   text-align: left;
   vertical-align: middle;
